B&L QA/objects/Call_Plan_Detail__c.object
<CustomObject>
    <description>INDSU Sales/Service team members to upload the monthly call plan Details</description>
    <fields>
        <fullName>AES_Product1__c</fullName>
        <label>AES-Product1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraxel DUAL</fullName>
                </value>
                <value>
                    <fullName>Classic VASER Lipo System with VentX Console</fullName>
                </value>
                <value>
                    <fullName>Clear+Brilliant system (includes Original Handpiece)</fullName>
                </value>
                <value>
                    <fullName>Clear + Brilliant</fullName>
                </value>
                <value>
                    <fullName>Liposonix</fullName>
                </value>
                <value>
                    <fullName>Isolaz</fullName>
                </value>
                <value>
                    <fullName>Thermage CPT System (Incl. 1 Face Handpiece, 1 Body Handpiece)</fullName>
                </value>
                <value>
                    <fullName>Upgrade from Isolaz / PPx to Isolaz 2 System</fullName>
                </value>
                <value>
                    <fullName>VASER Lipo System with VentX Console (220V)</fullName>
                </value>
                <value>
                    <fullName>Classic VASER Lipo System with VentX Console (220V)</fullName>
                </value>
                <value>
                    <fullName>New VASER Lipo System Only with Accessories (220V)</fullName>
                </value>
                <value>
                    <fullName>Classic VASER Lipo System Only with Accessories (220V)</fullName>
                </value>
                <value>
                    <fullName>Classic VASER Lipo System Only with Accessories (CPO - 220V)</fullName>
                </value>
                <value>
                    <fullName>VASER Lipo System with VASERsmooth and VentX Console (220V)</fullName>
                </value>
                <value>
                    <fullName>VASER Lipo System Only with VASERsmooth (220V)</fullName>
                </value>
                <value>
                    <fullName>VASERsmooth Upgrade (220V)</fullName>
                </value>
                <value>
                    <fullName>Thermage 0.25cm, 450 REP</fullName>
                </value>
                <value>
                    <fullName>Thermage 3.00cm, 600 REP</fullName>
                </value>
                <value>
                    <fullName>Thermage 3.00cm, 900 REP</fullName>
                </value>
                <value>
                    <fullName>Thermage 3.00cm, 1200 REP</fullName>
                </value>
                <value>
                    <fullName>Fraxel Cool Roller Tip - 1 Large</fullName>
                </value>
                <value>
                    <fullName>Fraxel 1550 Roller Tip - 1 Small</fullName>
                </value>
                <value>
                    <fullName>Fraxel 1550 Roller Tip - 1 Large</fullName>
                </value>
                <value>
                    <fullName>Clear+Brilliant Tips, 12-Pack</fullName>
                </value>
                <value>
                    <fullName>Single Tip (for reference only)</fullName>
                </value>
                <value>
                    <fullName>Clear + Brilliant Perméa Tips, 12-Pack</fullName>
                </value>
                <value>
                    <fullName>Isolaz 2 Treatment Tip, Acne, Credit (12-tx) (Choose 3 boxes of Tips)</fullName>
                </value>
                <value>
                    <fullName>Isolaz 2 Treatment Tip, Profusion Kit, 12-pk</fullName>
                </value>
                <value>
                    <fullName>Isolaz 2 Acne and Profusion Tip Bundle (12-tx) (Choose 3 boxes of Tips)</fullName>
                </value>
                <value>
                    <fullName>Body Handpiece 16.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AES_Product2__c</fullName>
        <label>AES-Product2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AESProduct2-1</fullName>
                </value>
                <value>
                    <fullName>AESProduct2-2</fullName>
                </value>
                <value>
                    <fullName>AESProduct2-3</fullName>
                </value>
                <value>
                    <fullName>Fraxel DUAL</fullName>
                </value>
                <value>
                    <fullName>Classic VASER Lipo System with VentX Console</fullName>
                </value>
                <value>
                    <fullName>Clear+Brilliant system (includes Original Handpiece)</fullName>
                </value>
                <value>
                    <fullName>Clear + Brilliant</fullName>
                </value>
                <value>
                    <fullName>Liposonix</fullName>
                </value>
                <value>
                    <fullName>Isolaz</fullName>
                </value>
                <value>
                    <fullName>Thermage CPT System (Incl. 1 Face Handpiece, 1 Body Handpiece)</fullName>
                </value>
                <value>
                    <fullName>Upgrade from Isolaz / PPx to Isolaz 2 System</fullName>
                </value>
                <value>
                    <fullName>VASER Lipo System with VentX Console (220V)</fullName>
                </value>
                <value>
                    <fullName>Classic VASER Lipo System with VentX Console (220V)</fullName>
                </value>
                <value>
                    <fullName>New VASER Lipo System Only with Accessories (220V)</fullName>
                </value>
                <value>
                    <fullName>Classic VASER Lipo System Only with Accessories (220V)</fullName>
                </value>
                <value>
                    <fullName>Classic VASER Lipo System Only with Accessories (CPO - 220V)</fullName>
                </value>
                <value>
                    <fullName>VASER Lipo System with VASERsmooth and VentX Console (220V)</fullName>
                </value>
                <value>
                    <fullName>VASER Lipo System Only with VASERsmooth (220V)</fullName>
                </value>
                <value>
                    <fullName>VASERsmooth Upgrade (220V)</fullName>
                </value>
                <value>
                    <fullName>Thermage 0.25cm, 450 REP</fullName>
                </value>
                <value>
                    <fullName>Thermage 3.00cm, 600 REP</fullName>
                </value>
                <value>
                    <fullName>Thermage 3.00cm, 900 REP</fullName>
                </value>
                <value>
                    <fullName>Thermage 3.00cm, 1200 REP</fullName>
                </value>
                <value>
                    <fullName>Fraxel Cool Roller Tip - 1 Large</fullName>
                </value>
                <value>
                    <fullName>Fraxel 1550 Roller Tip - 1 Small</fullName>
                </value>
                <value>
                    <fullName>Fraxel 1550 Roller Tip - 1 Large</fullName>
                </value>
                <value>
                    <fullName>Clear+Brilliant Tips, 12-Pack</fullName>
                </value>
                <value>
                    <fullName>Single Tip (for reference only)</fullName>
                </value>
                <value>
                    <fullName>Clear + Brilliant Perméa Tips, 12-Pack</fullName>
                </value>
                <value>
                    <fullName>Isolaz 2 Treatment Tip, Acne, Credit (12-tx) (Choose 3 boxes of Tips)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for KOR SOLTA.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Plan Detail</relationshipLabel>
        <relationshipName>Call_Plan_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Objective__c</fullName>
        <description>INDSU filed to collect the objective set for the call</description>
        <label>Call Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Plan__c</fullName>
        <description>INDSU field to capture the contact the planned visit is for.</description>
        <label>Call Plan</label>
        <referenceTo>Call_Plan__c</referenceTo>
        <relationshipLabel>Call Plan Detail</relationshipLabel>
        <relationshipName>Call_Plan_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INDSU field to indicate if a visits is planned or not.</description>
        <label>Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>INDSU field to capture the date of the planned visit.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Joint_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INDSU field to indicate the call as a joint call with manager</description>
        <label>Joint Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OT_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OT Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physician_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INDSU field to capture the contact the planned visit is for.</description>
        <label>Physician Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Plan Detail</relationshipLabel>
        <relationshipName>Call_Plan_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akreos AO</fullName>
                </value>
                <value>
                    <fullName>Akreos Adapt</fullName>
                </value>
                <value>
                    <fullName>Akreos MIL</fullName>
                </value>
                <value>
                    <fullName>enVista</fullName>
                </value>
                <value>
                    <fullName>Crystalens</fullName>
                </value>
                <value>
                    <fullName>Stellaris/PC</fullName>
                </value>
                <value>
                    <fullName>Millennium</fullName>
                </value>
                <value>
                    <fullName>Protege</fullName>
                </value>
                <value>
                    <fullName>Thermage</fullName>
                </value>
                <value>
                    <fullName>Fraxel</fullName>
                </value>
                <value>
                    <fullName>Vaser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akreos AO</fullName>
                </value>
                <value>
                    <fullName>Akreos Adapt</fullName>
                </value>
                <value>
                    <fullName>Akreos MIL</fullName>
                </value>
                <value>
                    <fullName>enVista</fullName>
                </value>
                <value>
                    <fullName>Crystalens</fullName>
                </value>
                <value>
                    <fullName>Stellaris/PC</fullName>
                </value>
                <value>
                    <fullName>Millennium</fullName>
                </value>
                <value>
                    <fullName>Protege</fullName>
                </value>
                <value>
                    <fullName>Thermage</fullName>
                </value>
                <value>
                    <fullName>Fraxel</fullName>
                </value>
                <value>
                    <fullName>Vaser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for KOREA SOLTA</description>
        <label>isFinished</label>
        <type>Checkbox</type>
    </fields>
    <label>Call Plan Detail</label>
    <nameField>
        <displayFormat>CPD{00000000}</displayFormat>
        <label>Call Plan Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Plan Detail</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Call_Plan_Detail</fullName>
        <active>true</active>
        <description>APACSU record type to enter planned call details.</description>
        <label>APACSU Call Plan Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Call_Plan_Detail</fullName>
        <active>true</active>
        <description>INDSU record type to enter planned call details</description>
        <label>INDSU Call Plan Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>KOR_SOLTA_CallPlan_Detail</fullName>
        <active>true</active>
        <description>KOR SOLTA Record type to enter Planned Call Details</description>
        <label>KOR SOLTA CallPlan Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>